Refactored code to reflect new app name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wingman-marketing-app",
+  "name": "chatwing-marketing-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
